--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,9 +1,6 @@
-/* .friend_list {
-
-} */
 .item {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   border: 1px solid black;
   border-radius: 5px;
